<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/xmlBas"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/baskharaNome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="17dp"
            android:text="@string/baskhara" />

        <EditText
            android:id="@+id/aBaskhara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/a" />

        <EditText
            android:id="@+id/bBaskhara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/b" />

        <EditText
            android:id="@+id/deltaBaskhara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/delta" />

        <TextView
            android:id="@+id/resultadoBaskhara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="30dp" />

        <Button
            android:id="@+id/calculaBaskhara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />
    </LinearLayout>

</ScrollView>