<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/xmlMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/matematica"
        android:src="@drawable/ic_launcher" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btMat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/matematica"
                android:src="@drawable/logomtm" />

            <ImageView
                android:id="@+id/btQmq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/quimica"
                android:src="@drawable/logoqmq" />

            <ImageView
                android:id="@+id/btFsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logofsc"
                android:contentDescription="@string/fisica" />

                        <ImageView
                android:id="@+id/btOtrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logootrs"
                android:contentDescription="@string/fisica" />
            
                                    <ImageView
                android:id="@+id/btBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logobio"
                android:contentDescription="@string/fisica" />
                        
         
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>